--- a/components/sidebar/sidebar.module.css
+++ b/components/sidebar/sidebar.module.css
@@ -1,5 +1,39 @@
 .sideBar{
-    height: 100%;
-    width: 300px;
-    background-color: lightgrey;
+    height:100vh;
+    background-color: rgb(245, 245, 245);
+    width: 250px;
 }
+
+.navItemImg {
+    height: 1.25rem;
+    width: 1.25rem;
+}
+
+.logoSection {
+    display: flex;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-left: 0.5rem;
+    gap: 0.6rem;
+    align-items: center;
+}
+
+.nav {
+    display: flex;
+    flex-direction: column;
+}
+
+.navItem{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    border: none;
+    padding-left: 0.5rem;
+}
+
+.sidebarFooter {
+    position: fixed;
+    bottom: 0;
+    margin-left: 0.5rem;
+}
+
