designing login page

--- a/components/Sidebar/sidebar.module.css
+++ b/components/Sidebar/sidebar.module.css
@@ -32,6 +32,11 @@
     background-color: rgb(245, 245, 245);
 }
 
+.navItem.active {
+    font-weight: 700;
+    background-color: lightgrey;
+}
+
 .navItem:hover {
     background-color: lightgrey;
     cursor: pointer;
