--- a/components/Center/center.module.css
+++ b/components/Center/center.module.css
@@ -1,4 +1,49 @@
 .centerContainer {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    padding-right: 3.5rem;
+}
+
+.headerSection {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.welcomeSection p{
+    margin-bottom: -1rem;
+    opacity: 0.5;
+}
+
+.userSection {
+    display: flex;
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.userSection button {
+    width: 6rem;
+    height: 2.5rem;
+    background-color: #275ff8;
+    color: white;
+    font-weight: 600;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.userDetails {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem
+}
+
+.userDetails p{
+    font-weight: 700;
+}
+
+
+.contentSection {
+
 }
