working on auth forms

--- a/components/Sidebar/sidebar.module.css
+++ b/components/Sidebar/sidebar.module.css
@@ -18,6 +18,10 @@
     align-items: center;
 }
 
+.logoSection:hover{
+    cursor: pointer;
+}
+
 .nav {
     display: flex;
     flex-direction: column;
