--- a/components/Auth/auth.module.css
+++ b/components/Auth/auth.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-grow: 1;
+    height: 100vh;
 }
 
 .testBox{
