--- a/components/Auth/auth.module.css
+++ b/components/Auth/auth.module.css
@@ -8,6 +8,60 @@
 
 .testBox{
     background-color: pink;
-    height: 10rem;
-    width: 10rem;
+    height: 50rem;
+    width: 50rem;
+}
+
+.formContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap:0.5rem;
+}
+
+.formContent{
+    display:flex;
+    background-color: rgb(238, 238, 238);
+    border-radius: 10px;
+    padding: 0 1rem 1rem 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 350px;
+}
+
+.inputContainer input{
+    height: 100%;
+    position:relative;
+    width: 100%;
+    background-color: whitesmoke;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    outline: 0;
+    padding: 4px 20px 0;
+    margin-top: 5px;
+}
+
+.inputContainer {
+    height: 40px;
+    position: relative;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.button {
+    background-color: #08d;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    cursor: pointer;
+    font-size: 18px;
+    height: 50px;
+    margin-top: 2.5rem;
+    outline: 0;
+    text-align: center;
+    width: 100%;
 }
